2004-03-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/tie-performer.cc (acknowledge_audio_element): bugfix: use
	and init ties_created_

	* lily/include/music-iterator.hh (IMPLEMENT_CTOR_CALLBACK): remove
	doc string from IMPLEMENT_CTOR_CALLBACK().

	* lily/engraver.cc (typeset_grob): paranoia: take care of the case
	that engraver is in a performer hierarchy.

2004-03-17  Heikki Junes <hjunes@cc.hut.fi>

	* vim/lilypond-ftdetect.vim: new file.

2004-03-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (compose_ly): bugfix for relative < 0. 
	(compose_ly): default octave should be middle C.

	* Documentation/user/changing-defaults.itely (Layout tunings
	within contexts): new node.

	* lily/include/smobs.hh: document C++ smob interface.

	* lily/function-documentation.cc: don't doc functions without
	docstring.

2004-03-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/lilypond.tely: Remove `* lilypond' node from
	direntry, so that `info lilypond' goes to Top.

	* scm/output-ps.scm (polygon): Fix: add spaces.

	* scm/page-layout.scm (ly:optimal-page-breaks): Bugfix: underful
	solutions are now optimal too.

	* input/test/page-breaks.ly: New file.

	* lily/paper-outputter.cc (Paper_outputter): Import page breaking
	functions into safe module.

	* lily/lily-guile.cc (ly:number->string): Do not leave space at
	end, prepend zeros.

	* scm/output-*.scm: Use ly:number->string rather than
	number->string.  Makes for saner output.

	* scm/output-ps.scm (define-fonts): Always scale by designsize.
	Fixes feta-nummer, feta-din scaling.

2004-03-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: use latin1.

	* scm/music-functions.scm (descend-to-context): new
	function. Similar to context-spec-music.
	(make-time-signature-set): specify Score as descend-only. This
	fixes the polymetric.ly example.

	* lily/context-specced-music-iterator.cc (construct_children): add