@@ -43,6 +43,11 @@ class Stencil
 {
   friend SCM ly_stencil_set_extent_x (SCM, SCM, SCM);
 
+  /*
+    This provides the reference point of the symbol, for example with
+    characters, it is on the base line of the character. Usually,
+    ORIGIN is inside DIM_
+   */
   Offset origin_;
   Box dim_;
   SCM expr_;
