@@ -1,3 +1,10 @@
+2004-03-21  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/system.cc (uniquify_list): bugfix. This fixes spuriously
+	translated stencils in the output.
+
+	* lily/paper-outputter.cc (output_line): don't add Stencil::origin.
+
 2004-03-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/tie-performer.cc (acknowledge_audio_element): bugfix: use
